--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
   </head>
   <body>
 
-    A simple Calculator
+
+<div class="container">
+  <div class="calculator">
+
+  </div>
+
+</div>
+
+
+
+
 
 
 
