--- a/index.html
+++ b/index.html
@@ -11,6 +11,45 @@
 
 <div class="container">
   <div class="calculator">
+    <div class="result">
+      <div class="history">
+        <p class="history-value">history</p>
+
+      </div>
+      <div class="output">
+        <p class="output-value">output</p>
+
+      </div>
+
+    </div>
+    <div class="keyboard">
+
+      <button class="operator" type="button" name="button">C</button>
+      <button class="operator" type="button" name="button">CE</button>
+      <button class="operator" type="button" name="button">%</button>
+      <button class="operator" type="button" name="button">&#247</button>
+      <button class="number" type="button" name="button">7</button>
+      <button class="number" type="button" name="button">8</button>
+      <button class="number" type="button" name="button">9</button>
+      <button class="operator" type="button" name="button">&times</button>
+      <button class="number" type="button" name="button">4</button>
+      <button class="number" type="button" name="button">5</button>
+      <button class="number" type="button" name="button">6</button>
+      <button class="operator" type="button" name="button">-</button>
+      <button class="number" type="button" name="button">1</button>
+      <button class="number" type="button" name="button">2</button>
+      <button class="number" type="button" name="button">3</button>
+      <button class="operator" type="button" name="button">+</button>
+      <button class="blank" type="button" name="button"></button>
+      <button class="number" type="button" name="button">0</button>
+      <button class="blank" type="button" name="button"></button>
+      <button class="operator" type="button" name="button">=</button>
+
+
+
+
+
+    </div>
 
   </div>
 
